# alibaba-cloud-sdk-rust

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/sdk/: client.rs  mod.rs
src/sdk/auth/: mod.rs
src/sdk/auth/credentials/: access_key_credential.rs  mod.rs
src/sdk/auth/singers/: algorithms.rs  mod.rs  rpc_signature_composer.rs  signer.rs  signer_access_key.rs
src/sdk/endpoints/: mapping_resolver.rs  mod.rs
src/sdk/requests/: mod.rs  types.rs
src/sdk/responses/: mod.rs
src/services/: mod.rs
src/services/dysmsapi/: client.rs  mod.rs  send_sms.rs
