[package]
name = "alibaba-cloud-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gostd = "0.3" 
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
simplelog= "0.9" 
log = "0.4"
regex = "1.5"
ring = "0.16.20"
base64 = "0.13.0"


