[package]
name = "alibaba-cloud-sdk-rust"
license = "MIT"
version = "0.1.0"
edition = "2018"
authors = ["wandercn<wander@ffactory.org>"]
description = "Alibaba Cloud SDK for Rust"
homepage = "https://github.com/wandercn/alibaba-cloud-sdk-rust"
repository = "https://github.com/wandercn/alibaba-cloud-sdk-rust"
keywords = ["dysmsapi","smssdk","gostd","aliyunapi","aliyunsms"]
categories= ["api-bindings","accessibility","development-tools","compilers"]

[dependencies]
gostd = "0.3" 
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
simplelog= "0.9" 
log = "0.4"
regex = "1.5"
ring = "0.16.20"
base64 = "0.13.0"
uuid = { version = "1.0.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }


